js fix for overlapping parallax images :(

--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ p.lead {
 @media (max-width: 575px) {
   :root{ --container-width: calc(100vw - 20px); }
   .parallax-window{ height: 70vh; }
-  .carousel-img-container{ height: 50vh; }
+  .carousel-img-container{ height: 70vh; }
 }
 @media (min-width: 576px) and (max-width: 767px) {
   :root{ --container-width: 540px; }
@@ -86,18 +86,18 @@ p.lead {
 }
 @media (min-width: 768px) and (max-width: 991px) {
   :root{ --container-width: 720px; }
-  .parallax-window { height: 50vh; }
-  .carousel-img-container{ height: 60vh; }
+  .parallax-window { height: 70vh; }
+  .carousel-img-container{ height: 70vh; }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   :root{ --container-width: 960px; }
-  .parallax-window { height: 60vh; }
+  .parallax-window { height: 70vh; }
   .carousel-img-container{ height: 70vh; }
 }
 @media (min-width: 1200px) and (max-width: 1399px) {
   :root{ --container-width: 1140px; }
   .parallax-window { height: 70vh; }
-  .carousel-img-container{ height: 80vh; }
+  .carousel-img-container{ height: 70vh; }
 }
 @media (min-width: 1400px) {
   :root{ --container-width: 1320px; }
@@ -149,16 +149,22 @@ router-outlet + * {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 1px solid red;; */
+  /* overflow: hidden; */
+  /* border: 1px solid red; */
+  z-index: 1;
+
 }
 
 .parallax-layer {
   position: absolute;
-  z-index: 99;
+  z-index: 9999;
 /* Width of the image is calculated by javascript in component main.component.ts */
 /* transform: translateZ(-200px) scale( calc( var(--scaleRatioImg) * 500 / 300)); */
 /* NB this is now done in the component through NgStyle */
   transform-style: preserve-3d;
+  visibility: hidden;
+
+  /* clip-path: circle(50%); */
 }
 
 /* ===================================================
